cleanup source, add meta tags, convert to sass

--- a/index.njk
+++ b/index.njk
@@ -5,32 +5,26 @@ navigation:
     page: index
 ---
 
-<h1 class="title" id="page-title">Norilsk Russia: Travel Guide To The World's Most Northerly City!</h1>
-<div id="content-content" class="clear-block">
-    <div class="article-photo">
-        <div id="photo-gallery">
-            <div class="field-items">
-                <div class="sub-text-wrapper">
-                    <div class="sub-text">
-                        <div class="field-item">
-                            <img src="img/norilsk-russia.jpg" alt="people walk along a sunny street in norilsk's city center" title="Norilsk City Center" width="300" height="198">
-                        </div>
-                        <p>Norilsk City Center</p>
-                    </div>
-                </div>
-            </div>
-        </div>
+<h1>Norilsk Russia: Travel Guide To The World's Most Northerly City!</h1>
+
+<div id="content-content">
+    <div class="photo-wrapper">
+        <img src="img/norilsk-russia.jpg" alt="people walk along a sunny street in norilsk's city center" title="Norilsk City Center" width="300" height="198">
+        <p>Norilsk City Center</p>
     </div>
 
     <h2>Happiness and Sunshine</h2>
     <p>Norilsk sits atop a lush green landscape, bathed in oxygen rich, clean arctic air. Thick forest and dense grasses spread out in each direction for hundreds of miles. Thousands of species of plant and animal live together in multi-biological harmony. Seeds that blow in from afar are lucky to sprout here, in the pure black soil of Krasnoyarski-Krai.&nbsp;</p>
+    
     <h2>Health and Beauty</h2>
     <p>For over a hundred years Norilsk has attracted Soviet tourists with its pristine natural surroundings. They come to bathe in geothermal spas, inner tube off of waterfalls and suntan on the pristine shores of the Arctic Ocean. Mineral rich waters and pure air adds longevity to all those who live here. Many Norilsk natives are well into their 100s. Some are believed to be over 150 years old! Unfortunately their birth records were lost during the chaos of the Russo-Manchurian war.&nbsp;</p>
+    
     <h2>Tolstoy's Russia</h2>
     <p>Hundreds of westerners visit &nbsp;Norilsk, and their numbers grow following every season. Norilsk's distance from populated areas is the only reason it has not become more popular than Cancun, Aruba or Ibiza. This has advantages! Traditional Russian culture is slowly disappearing from glitzy cities like Magnitogorsk. In Norilsk you will find "The Real Russia" that Pushkin and Tolstoi wrote about.</p>
+    
     <h2>Norilsk Nickel Peoples' Mining Concern</h2>
     <p>Adequate global supplies of nickel ensure that important household items such as hydrogenated vegetable oil and green tinted glass are economically viable to produce. Hero workers of Norilsk descend miles deep into the earth's crust in search of the world's most valuable metal. &nbsp;Above ground the mined source rock is crushed and smelted in a wholly carbon neutral process. So clean is waste ore that it is used as a garden fertilizer and colon cleansing tonic. Nickel mining in Norilsk not only serves the needs of global heavy industry, but also acts as a steward of the environment. &nbsp;</p>
+    
     <h2>Pristine Nature</h2>
     <p>Be sure to visit Norilsk in early spring, when wild flowers and cherry trees go into full bloom. The sight is awe inspiring to the point of collapsing in tears of joy!</p>
 </div>
-<!-- /content-content -->
