--- a/_includes/index.njk
+++ b/_includes/index.njk
@@ -5,68 +5,86 @@ title: "Norilsk Russia: Promoting Tourism To The World's Most Northerly City"
 <html lang="en">
 
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>{{ title }}</title>
-  <link rel="stylesheet" href="css/style.css">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- Primary Meta Tags -->
+    <title>{{ title }}</title>
+    <meta name="title" content="{{ title }}">
+    <meta name="description" content="Travel Guide To The World's Most Northerly City!">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://norilskrussia.net/">
+    <meta property="og:title" content="{{ title }}">
+    <meta property="og:description" content="Travel Guide To The World's Most Northerly City!">
+    <meta property="og:image" content="/img/norilsk-russia.jpg">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://norilskrussia.net/">
+    <meta property="twitter:title" content="{{ title }}">
+    <meta property="twitter:description" content="Travel Guide To The World's Most Northerly City!">
+    <meta property="twitter:image" content="/img/norilsk-russia.jpg">
+
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-  <div id="page">
-    <div id="header">
-      <div id="header-logo">
-        <a href="index.html">
-          <img src="img/norilsk-russia-flag.png" alt="Norilsk Russia" title="Norilsk Russia">
-        </a>
-      </div>
-      <div id="name-and-slogan">
-        <h1 id="site-name">
-          <a href="index.html" title="Home" rel="home">
-            <span>Norilsk Russia</span>
-          </a>
-        </h1>
-      </div>
+    <div id="page">
+        <div id="header">
+            <div id="header-logo">
+                <a href="index.html">
+                    <img src="img/norilsk-russia-flag.png" alt="Norilsk Russia" title="Norilsk Russia">
+                </a>
+            </div>
+            <div id="name-and-slogan">
+                <h1 id="site-name">
+                    <a href="index.html" title="Home" rel="home">
+                        <span>Norilsk Russia</span>
+                    </a>
+                </h1>
+            </div>
+        </div>
+
+        <div id="container">
+            <div id="navigation">
+                <div id="primary" class="clear-block">
+                    <ul class="links">
+                        <li class="{% if navigation.page == 'index' %}active{% endif %}">
+                            <a href="index.html" title="Norilsk Home Page">Home</a>
+                        </li>
+                        <li class="{% if navigation.page == 'norilsk-people' %}active{% endif %}">
+                            <a href="norilsk-people.html" title="People of Norilsk">People</a>
+                        </li>
+                        <li class="{% if navigation.page == 'norilsk-resources' %}active{% endif %}">
+                            <a href="norilsk-resources.html" title="Norilsk Is The Most Resource Rich City On Earth">Resources</a>
+                        </li>
+                        <li class="{% if navigation.page == 'norilsk-nature' %}active{% endif %}">
+                            <a href="norilsk-nature.html" title="Norilsk Russia is an Ecological Paradise">Nature</a>
+                        </li>
+                        <li class="{% if navigation.page == 'norilsk-weather' %}active{% endif %}">
+                            <a href="norilsk-weather.html" title="Norilsk Weather Is Ideal For a Family Vacation">Weather</a>
+                        </li>
+                        {# <li class="{% if navigation.page == 'norilsk-video' %}active{% endif %}">
+                            <a href="norilsk-video.html" title="Norilsk Music Video: &quot;Song of a Polar Summer&quot;">Video</a>
+                        </li> #}
+                        <li class="{% if navigation.page == 'norilsk-links' %}active{% endif %}">
+                            <a href="/norilsk-links.html" title="Norilsk Links">Links</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+
+            <div id="content">
+                {{ content | safe }}
+            </div>
+
+            <div id="footer">
+                Restored and maintained by <a href="https://phelps.io/">Бенджамін Фелпс</a>.
+            </div>
+        </div>
     </div>
-
-    <div id="container" class="clear-block">
-      <div id="navigation" class="menu withprimary ">
-        <div id="primary" class="clear-block">
-          <ul class="links primary-links">
-            <li class="first {% if navigation.page == 'index' %}active{% endif %}"><a href="index.html"
-                title="Norilsk Home Page">Home</a></li>
-            <li class="{% if navigation.page == 'norilsk-people' %}active{% endif %}"><a href="norilsk-people.html"
-                title="People of Norilsk">People</a></li>
-            <li class="{% if navigation.page == 'norilsk-resources' %}active{% endif %}"><a
-                href="norilsk-resources.html" title="Norilsk Is The Most Resource Rich City On Earth">Resources</a>
-            </li>
-            <li class="{% if navigation.page == 'norilsk-nature' %}active{% endif %}"><a href="norilsk-nature.html"
-                title="Norilsk Russia is an Ecological Paradise">Nature</a></li>
-            <li class="{% if navigation.page == 'norilsk-weather' %}active{% endif %}"><a href="norilsk-weather.html"
-                title="Norilsk Weather Is Ideal For a Family Vacation">Weather</a></li>
-            {# <li class="{% if navigation.page == 'norilsk-video' %}active{% endif %}"><a href="norilsk-video.html"
-                title="Norilsk Music Video: &quot;Song of a Polar Summer&quot;">Video</a>
-            </li> #}
-            {# <li class="last {% if navigation.page == 'norilsk-links' %}active{% endif %}"><a href="/norilsk-links.html"
-                title="Norilsk Links">Links</a></li> #}
-          </ul>
-        </div>
-      </div> <!-- /navigation -->
-      <div id="main" class="column">
-        <div id="main-squeeze">
-          <div id="content">
-            {{ content | safe }}
-          </div> <!-- /content -->
-        </div>
-      </div> <!-- /main-squeeze /main -->
-
-      {# <div id="footer-wrapper">
-        <div id="footer">
-
-        </div>
-      </div> #}
-
-    </div>
-  </div>
 </body>
 
 </html>
