--- a/norilsk-nature.njk
+++ b/norilsk-nature.njk
@@ -6,47 +6,41 @@ navigation:
     page: norilsk-nature
 ---
 
-<h1 class="title" id="page-title">One Billion Acres Of Natural Beauty Surrounds Norilsk</h1>
+<h1>One Billion Acres Of Natural Beauty Surrounds Norilsk</h1>
+
 <div id="content-content" class="clear-block">
-    <div class="article-photo">
-        <div id="photo-gallery">
-            <div class="field-items">
-                <div class="sub-text-wrapper">
-                    <div class="sub-text">
-                        <div class="field-item"><img
-                                    src="/img/norilsk-flowers.jpg"
-                                    alt="Norilsk Flowers" title="Norilsk is Home to Pretty Flowers" width="300"
-                                    height="199"></div>
-                        <p>Norilsk is Home to Pretty Flowers</p>
-                    </div>
-                </div>
-                <div class="sub-text-wrapper">
-                    <div class="sub-text">
-                        <div class="field-item"><img
-                                    src="/img/norilsk-nature.jpg"
-                                    alt="spring flowers bloom in norilsk" title="Spring Bloom in Norilsk" width="300"
-                                    height="224"></div>
-                        <p>Spring Bloom in Norilsk</p>
-                    </div>
-                </div>
-            </div>
-        </div>
+    <div class="photo-wrapper">
+        <img src="/img/norilsk-flowers.jpg" alt="Norilsk Flowers" title="Norilsk is Home to Pretty Flowers" width="300" height="199">
+        <p>Norilsk is Home to Pretty Flowers</p>
+    </div>
+    
+    <div class="photo-wrapper">
+        <img src="/img/norilsk-nature.jpg" alt="spring flowers bloom in norilsk" title="Spring Bloom in Norilsk" width="300" height="224">
+        <p>Spring Bloom in Norilsk</p>
     </div>
 
     <h2>Green and Clean</h2>
-    <p>So clean, blue and transparent is the air above Norilsk that when standing on tippy toes Sarah Palin can be seen
+    <p>
+        So clean, blue and transparent is the air above Norilsk that when standing on tippy toes Sarah Palin can be seen
         just above the horizon. The virgin fields surrounding Norilsk are awash in flora and fauna. More bio-diversity
         is entrenched here than in the Amazon basin. Vast seas of green are visible in every direction. Smells of a
         million flower species saturate the air in a chorus of aromatherapy. Local mosquitos are so happy they drink the
-        sap of daisies rather than blood.</p>
+        sap of daisies rather than blood.
+    </p>
+
     <h2>The Arctic Shore</h2>
-    <p>Like its sister cities Monaco, Cancun, Miami and Rio De Janeiro, Norilsk is only steps away from a gorgeous,
+    <p>
+        Like its sister cities Monaco, Cancun, Miami and Rio De Janeiro, Norilsk is only steps away from a gorgeous,
         crystal blue ocean. Hundreds of miles of white sand beaches are shared by polite beach goers and hummingbirds.
         Dolphins swim near the coast as lifeguards, saving children who venture too far. On the shores of Norilsk you
         will find only high culture and civility. There are no casinos, brothels, crack houses, mafia or hypodermic
-        needles. You may sit without looking.</p>
+        needles. You may sit without looking.
+    </p>
+
     <h2>Polar Bears and Baby Seals</h2>
-    <p>In the West, in supposed democratic, tolerant countries, baby seals are clubbed to death in a murderous frenzy.
+    <p>
+        In the West, in supposed democratic, tolerant countries, baby seals are clubbed to death in a murderous frenzy.
         Polar bears are hunted for sport. In Norilsk, people and animals live as one, enjoying the same rights and
-        priviledges endowed by their creator.</p>
-</div> <!-- /content-content -->
+        priviledges endowed by their creator.
+    </p>
+</div>
