--- a/norilsk-links.njk
+++ b/norilsk-links.njk
@@ -1,4 +1,4 @@
---- 
+---
 layout: index.njk
 permalink: norilsk-links.html
 title: "Norilsk Links"
@@ -8,22 +8,22 @@ navigation:
 
 <h1>Norilsk Links</h1>
 
-<div id="content-content">
-    <p>
-        <strong><a href="https://www.nornickel.com/">Norilsk Nickel</a></strong><br>
-        The central interwebs presence of Earth's largest and most socially conscious
-        nickel miner. Within you may find annual reports, environmental policy, and numerous articles detailing the
-        company's sustainable development strategy.
-    </p>
-    <p>
-        <strong><a href="https://www.timeanddate.com/worldclock/russia/norilsk">Current Time in Norilsk</a></strong><br>
-        When planning a family vacation to Norilsk, it is important to know the
-        local time, which is a lengthy 7 hours ahead of GMT. The above website displays a clock that ticks with atomic
-        precision.
-    </p>
-    <p>
-        <strong><a href="http://university.nornik.ru/">Norilsk Nickel University</a></strong><br>
-        The Arctic Circle's largest and most prestigious university. Areas of higher
-        education include geology, geophysics and metallurgy.
-    </p>
-</div>
+<p>
+    <h3><a href="https://www.nornickel.com/">Norilsk Nickel</a></h3>
+    The central interwebs presence of Earth's largest and most socially conscious
+    nickel miner. Within you may find annual reports, environmental policy, and numerous articles detailing the
+    company's sustainable development strategy.
+</p>
+
+<p>
+    <h3><a href="https://www.timeanddate.com/worldclock/russia/norilsk">Current Time in Norilsk</a></h3>
+    When planning a family vacation to Norilsk, it is important to know the
+    local time, which is a lengthy 7 hours ahead of GMT. The above website displays a clock that ticks with atomic
+    precision.
+</p>
+
+<p>
+    <h3><a href="http://university.nornik.ru/">Norilsk Nickel University</a></h3>
+    The Arctic Circle's largest and most prestigious university. Areas of higher
+    education include geology, geophysics and metallurgy.
+</p>
