--- a/norilsk-nature.njk
+++ b/norilsk-nature.njk
@@ -1,4 +1,4 @@
---- 
+---
 layout: index.njk
 permalink: norilsk-nature.html
 title: "One Billion Acres Of Natural Beauty Surrounds Norilsk"
@@ -8,39 +8,37 @@ navigation:
 
 <h1>One Billion Acres Of Natural Beauty Surrounds Norilsk</h1>
 
-<div id="content-content" class="clear-block">
-    <div class="photo-wrapper">
-        <img src="/img/norilsk-flowers.jpg" alt="Norilsk Flowers" title="Norilsk is Home to Pretty Flowers" width="300" height="199">
-        <p>Norilsk is Home to Pretty Flowers</p>
-    </div>
-    
-    <div class="photo-wrapper">
-        <img src="/img/norilsk-nature.jpg" alt="spring flowers bloom in norilsk" title="Spring Bloom in Norilsk" width="300" height="224">
-        <p>Spring Bloom in Norilsk</p>
-    </div>
+<figure>
+    <img src="/img/norilsk-flowers.jpg" alt="Norilsk Flowers" title="Norilsk is Home to Pretty Flowers" width="300" height="199">
+    <figcaption>Norilsk is Home to Pretty Flowers</figcaption>
+</figure>
 
-    <h2>Green and Clean</h2>
-    <p>
-        So clean, blue and transparent is the air above Norilsk that when standing on tippy toes Sarah Palin can be seen
-        just above the horizon. The virgin fields surrounding Norilsk are awash in flora and fauna. More bio-diversity
-        is entrenched here than in the Amazon basin. Vast seas of green are visible in every direction. Smells of a
-        million flower species saturate the air in a chorus of aromatherapy. Local mosquitos are so happy they drink the
-        sap of daisies rather than blood.
-    </p>
+<figure>
+    <img src="/img/norilsk-nature.jpg" alt="spring flowers bloom in norilsk" title="Spring Bloom in Norilsk" width="300" height="224">
+    <figcaption>Spring Bloom in Norilsk</figcaption>
+</figure>
 
-    <h2>The Arctic Shore</h2>
-    <p>
-        Like its sister cities Monaco, Cancun, Miami and Rio De Janeiro, Norilsk is only steps away from a gorgeous,
-        crystal blue ocean. Hundreds of miles of white sand beaches are shared by polite beach goers and hummingbirds.
-        Dolphins swim near the coast as lifeguards, saving children who venture too far. On the shores of Norilsk you
-        will find only high culture and civility. There are no casinos, brothels, crack houses, mafia or hypodermic
-        needles. You may sit without looking.
-    </p>
+<h2>Green and Clean</h2>
+<p>
+    So clean, blue and transparent is the air above Norilsk that when standing on tippy toes Sarah Palin can be seen
+    just above the horizon. The virgin fields surrounding Norilsk are awash in flora and fauna. More bio-diversity
+    is entrenched here than in the Amazon basin. Vast seas of green are visible in every direction. Smells of a
+    million flower species saturate the air in a chorus of aromatherapy. Local mosquitos are so happy they drink the
+    sap of daisies rather than blood.
+</p>
 
-    <h2>Polar Bears and Baby Seals</h2>
-    <p>
-        In the West, in supposed democratic, tolerant countries, baby seals are clubbed to death in a murderous frenzy.
-        Polar bears are hunted for sport. In Norilsk, people and animals live as one, enjoying the same rights and
-        priviledges endowed by their creator.
-    </p>
-</div>
+<h2>The Arctic Shore</h2>
+<p>
+    Like its sister cities Monaco, Cancun, Miami and Rio De Janeiro, Norilsk is only steps away from a gorgeous,
+    crystal blue ocean. Hundreds of miles of white sand beaches are shared by polite beach goers and hummingbirds.
+    Dolphins swim near the coast as lifeguards, saving children who venture too far. On the shores of Norilsk you
+    will find only high culture and civility. There are no casinos, brothels, crack houses, mafia or hypodermic
+    needles. You may sit without looking.
+</p>
+
+<h2>Polar Bears and Baby Seals</h2>
+<p>
+    In the West, in supposed democratic, tolerant countries, baby seals are clubbed to death in a murderous frenzy.
+    Polar bears are hunted for sport. In Norilsk, people and animals live as one, enjoying the same rights and
+    priviledges endowed by their creator.
+</p>
