--- a/norilsk-people.njk
+++ b/norilsk-people.njk
@@ -8,45 +8,43 @@ navigation:
 
 <h1>The kindness of the people of Norilsk knows no boundaries.</h1>
 
-<div id="content-content">
-    <div class="photo-wrapper">
-        <img src="/img/norilsk-russia-smelter-operator-2.jpg" alt="norilsk smelter operators drink tea and discuss philosophy after hard days work" title="Norilsk Smelter Operators Drink Tea" width="300" height="225">
-        <p>Norilsk Smelter Operators Drink Tea</p>
-    </div>
+<figure>
+    <img src="/img/norilsk-russia-smelter-operator-2.jpg" alt="norilsk smelter operators drink tea and discuss philosophy after hard days work" title="Norilsk Smelter Operators Drink Tea" width="300" height="225">
+    <figcaption>Norilsk Smelter Operators Drink Tea</figcaption>
+</figure>
 
-    <h2>Angels and Saints</h2>
-    <p>
-        The people of Norilsk are saints not yet canonized. Long hours of work in nickel mines bring them a modest
-        paycheck, much of which is donated to charity. If you ever decide to visit the city of Norilsk, there is no need
-        to bring food or money. A Norilsk smelter operator would give his last potato to a hungry traveler.
-    </p>
+<h2>Angels and Saints</h2>
+<p>
+    The people of Norilsk are saints not yet canonized. Long hours of work in nickel mines bring them a modest
+    paycheck, much of which is donated to charity. If you ever decide to visit the city of Norilsk, there is no need
+    to bring food or money. A Norilsk smelter operator would give his last potato to a hungry traveler.
+</p>
 
-    <h2>Peace and Tolerance</h2>
-    <p>
-        Not a single criminal can be found here. Those who do arrive with a checkered past are so amazed by the kindness
-        and beauty of Norilsk’s inhabitants that they themselves are set straight. Not a single act of crime has been
-        committed within the last one hundred years.
-    </p>
+<h2>Peace and Tolerance</h2>
+<p>
+    Not a single criminal can be found here. Those who do arrive with a checkered past are so amazed by the kindness
+    and beauty of Norilsk’s inhabitants that they themselves are set straight. Not a single act of crime has been
+    committed within the last one hundred years.
+</p>
 
-    <h2>Love and Sharing</h2>
-    <p>
-        Doors are never locked and during the summer months are left wide open. Residents of an apartment building are
-        free to eat from each others refrigerator, sit on their couch and watch television. If a large sum of money is
-        found under the homeowner's mattress, it may be taken, then returned, or not, it doesn’t matter.
-    </p>
-    <p>
-        Norilskites are not bothered by the trivial pursuit of wealth accumulation. To the decadent Westerner, these
-        feats of human kindness seem impossible, like something out of a science-fiction workers' utopia novel. In Norilsk
-        it is reality. The people of Norilsk live on a higher plane of consciousness, one of boundless love and sharing.
-    </p>
+<h2>Love and Sharing</h2>
+<p>
+    Doors are never locked and during the summer months are left wide open. Residents of an apartment building are
+    free to eat from each others refrigerator, sit on their couch and watch television. If a large sum of money is
+    found under the homeowner's mattress, it may be taken, then returned, or not, it doesn’t matter.
+</p>
+<p>
+    Norilskites are not bothered by the trivial pursuit of wealth accumulation. To the decadent Westerner, these
+    feats of human kindness seem impossible, like something out of a science-fiction workers' utopia novel. In Norilsk
+    it is reality. The people of Norilsk live on a higher plane of consciousness, one of boundless love and sharing.
+</p>
 
-    <h2>Diversity and Multiculturalism</h2>
-    <p>
-        Immigrants arrive in Norilsk from all over the former Soviet Union and the world. After the 2008 financial
-        crisis, thousands of American refugees fled to Norilsk in search of a better life and a piece of the Russian
-        Dream. Most live on the west side of town in what has become a vibrant immigrant community. They are free to carry
-        on the corporate holiday traditions of their homeland with no fear of persecution from their Russian hosts. The
-        Superbowl, Valentines Day, Wrestlemania and Easter Breakfast at McDonalds are celebrated with no less intensity
-        and zeal.
-    </p>
-</div>
+<h2>Diversity and Multiculturalism</h2>
+<p>
+    Immigrants arrive in Norilsk from all over the former Soviet Union and the world. After the 2008 financial
+    crisis, thousands of American refugees fled to Norilsk in search of a better life and a piece of the Russian
+    Dream. Most live on the west side of town in what has become a vibrant immigrant community. They are free to carry
+    on the corporate holiday traditions of their homeland with no fear of persecution from their Russian hosts. The
+    Superbowl, Valentines Day, Wrestlemania and Easter Breakfast at McDonalds are celebrated with no less intensity
+    and zeal.
+</p>
