--- a/norilsk-resources.njk
+++ b/norilsk-resources.njk
@@ -8,45 +8,43 @@ navigation:
 
 <h1>Norilsk Is The Most Resource Rich City On Earth</h1>
 
-<div id="content-content">
-    <div class="photo-wrapper">
-        <img src="/img/norilsk-nature.jpg" alt="Plants grow strong in mineralized soil" title="Plants grow strong in mineralized soil" width="300" height="200">
-        <p>Plants grow strong in mineralized soil</p>
-    </div>
+<figure>
+    <img src="/img/norilsk-nature.jpg" alt="Plants grow strong in mineralized soil" title="Plants grow strong in mineralized soil" width="300" height="200">
+    <figcaption>Plants grow strong in mineralized soil</figcaption>
+</figure>
 
-    <h2>Nickel Copper Zinc Lead Tin Platinum Palladium Gold Silver</h2>
-    <p>
-        Beneath Norilsk lays the richest polymetallic ore on Earth. Deposits are found at depth, in ancient veins, the
-        now cold, hardened passageways of volcanic magma. Miners dug these passageways of mineral wealth for nearly a
-        century and have barely dented proven reserves. Grades below are so high and voluminous, they enriched the
-        surface soil hundreds of meters above.
-    </p>
-    <p>
-        Over half a billion years, by the simple process of osmosis, some metallic particles migrated to the surface. In
-        nearly all underground discoveries, minuscule concentrations are found in top soil, measuring just parts per
-        billion, but are a useful for identifying drill targets. Norilsk's top soil contains enough metal to be dug up
-        by hand, put in a wheelbarrow, smelted, and sold at a profit! Given the city's high salaries and generous
-        benefits, no one must stoop to the desperate pursuit of artisanal mining. Residents prefer to plant gardens,
-        then eat the over-sized mineral rich vegetables that sprout from the black, glittering soil of their beloved
-        Norilsk.
-    </p>
+<h2>Nickel Copper Zinc Lead Tin Platinum Palladium Gold Silver</h2>
+<p>
+    Beneath Norilsk lays the richest polymetallic ore on Earth. Deposits are found at depth, in ancient veins, the
+    now cold, hardened passageways of volcanic magma. Miners dug these passageways of mineral wealth for nearly a
+    century and have barely dented proven reserves. Grades below are so high and voluminous, they enriched the
+    surface soil hundreds of meters above.
+</p>
+<p>
+    Over half a billion years, by the simple process of osmosis, some metallic particles migrated to the surface. In
+    nearly all underground discoveries, minuscule concentrations are found in top soil, measuring just parts per
+    billion, but are a useful for identifying drill targets. Norilsk's top soil contains enough metal to be dug up
+    by hand, put in a wheelbarrow, smelted, and sold at a profit! Given the city's high salaries and generous
+    benefits, no one must stoop to the desperate pursuit of artisanal mining. Residents prefer to plant gardens,
+    then eat the over-sized mineral rich vegetables that sprout from the black, glittering soil of their beloved
+    Norilsk.
+</p>
 
-    <h2>Abu Dhabi of the North</h2>
-    <p>
-        Hyper inflation of the Greenspan-Bernanke biumverate transformed Norilsk into an ATM machine, whose smelters
-        churn out billions in hard, non-fiat currency every day. Whether the world's central banks print money or not,
-        production in Norilsk shall continue at an industry record profit margin. Ore grades are so high that mines
-        operate economically even during times of catastrophically low commodity prices. The 2008 base metals crash
-        bankrupted many resource companies around the world, but mining in Norilsk remained profitable despite nickel,
-        copper and zinc plunging 70%.
-    </p>
-    <p>
-        In most countries, greedy corporations strip every resource, pay out bonuses to the connected elite, and leave
-        behind an uninhabitable wasteland. Not so in Norilsk. The underground riches of Norilsk gush (not trickle) *up*
-        to every level of its social strata. Enormous tax surpluses allow city planners to build infrastructure on an
-        epic scale. Monuments to culture are sprouting alongside freshly paved, pothole free, cobblestone streets. By
-        referendum, the hero workers of Norilsk voted for construction of art galleries, opera houses, globe theaters
-        and multi-faith houses of worship - a direct reflection of the tolerant, cultured masses who reside in the
-        world's most northerly city.
-    </p>
-</div>
+<h2>Abu Dhabi of the North</h2>
+<p>
+    Hyper inflation of the Greenspan-Bernanke biumverate transformed Norilsk into an ATM machine, whose smelters
+    churn out billions in hard, non-fiat currency every day. Whether the world's central banks print money or not,
+    production in Norilsk shall continue at an industry record profit margin. Ore grades are so high that mines
+    operate economically even during times of catastrophically low commodity prices. The 2008 base metals crash
+    bankrupted many resource companies around the world, but mining in Norilsk remained profitable despite nickel,
+    copper and zinc plunging 70%.
+</p>
+<p>
+    In most countries, greedy corporations strip every resource, pay out bonuses to the connected elite, and leave
+    behind an uninhabitable wasteland. Not so in Norilsk. The underground riches of Norilsk gush (not trickle) *up*
+    to every level of its social strata. Enormous tax surpluses allow city planners to build infrastructure on an
+    epic scale. Monuments to culture are sprouting alongside freshly paved, pothole free, cobblestone streets. By
+    referendum, the hero workers of Norilsk voted for construction of art galleries, opera houses, globe theaters
+    and multi-faith houses of worship - a direct reflection of the tolerant, cultured masses who reside in the
+    world's most northerly city.
+</p>
