--- a/norilsk-weather.njk
+++ b/norilsk-weather.njk
@@ -8,33 +8,31 @@ navigation:
 
 <h1>Norilsk Weather Is Ideal For a Family Vacation</h1>
 
-<div id="content-content" class="clear-block">
-    <div class="photo-wrapper">
-        <img src="/img/norilsk-city-center.jpg" alt="Norilsk Weather" title="Sunny Warm Norilsk" width="300" height="225">
-        <p>Sunny Warm Norilsk</p>
-    </div>
+<figure>
+    <img src="/img/norilsk-city-center.jpg" alt="Norilsk Weather" title="Sunny Warm Norilsk" width="300" height="225">
+    <figcaption>Sunny Warm Norilsk</figcaption>
+</figure>
 
-    <div class="photo-wrapper">
-        <img src="/img/norilsk-white-nights.jpg" alt="norilsk white nights" title="White Nights: Norilsk at 3am" width="300" height="225">
-        <p>White Nights: Norilsk at 3am</p>
-    </div>
+<figure>
+    <img src="/img/norilsk-white-nights.jpg" alt="norilsk white nights" title="White Nights: Norilsk at 3am" width="300" height="225">
+    <figcaption>White Nights: Norilsk at 3am</figcaption>
+</figure>
 
-    <h2>Sun and Fun</h2>
-    <p>
-        Summer in Norilsk is hot and dry. Temperatures average well into the 90s, and humidity rarely exceeds 20%. In
-        American cities, walking under such heat would cause sunburn and eventually skin cancer. Throughout the 1980s,
-        mass quantities of CFCs were sprayed to prop up vertical hairstyles, ruining skies above. Due to strict Russian
-        environmental controls, and the popularity of water combed mullets, a healthy ozone layer floats above Norilsk,
-        blocking out all ultra violet rays. You may walk the cobblestone streets day and night, dressed only in European
-        speedos, skin glistening with baby oil under the polar sun.
-    </p>
+<h2>Sun and Fun</h2>
+<p>
+    Summer in Norilsk is hot and dry. Temperatures average well into the 90s, and humidity rarely exceeds 20%. In
+    American cities, walking under such heat would cause sunburn and eventually skin cancer. Throughout the 1980s,
+    mass quantities of CFCs were sprayed to prop up vertical hairstyles, ruining skies above. Due to strict Russian
+    environmental controls, and the popularity of water combed mullets, a healthy ozone layer floats above Norilsk,
+    blocking out all ultra violet rays. You may walk the cobblestone streets day and night, dressed only in European
+    speedos, skin glistening with baby oil under the polar sun.
+</p>
 
-    <h2>White Nights</h2>
-    <p>
-        While the rest of the world huddles in darkness, Norilsk bathes in 23 hours per day of sunshine. Plants have a
-        near unlimited supply of photons to drive photosynthesis. Fruits and vegetables grow to enourmous sizes in half
-        the time. Due to high levels of Vitamin D coursing through the blue blood of Norilsk's hero workers, their legs
-        are straighter and mood gayer than the mole people of lower latitudes who endure ten to twelve hours of cimmerian
-        shade.
-    </p>
-</div>
+<h2>White Nights</h2>
+<p>
+    While the rest of the world huddles in darkness, Norilsk bathes in 23 hours per day of sunshine. Plants have a
+    near unlimited supply of photons to drive photosynthesis. Fruits and vegetables grow to enourmous sizes in half
+    the time. Due to high levels of Vitamin D coursing through the blue blood of Norilsk's hero workers, their legs
+    are straighter and mood gayer than the mole people of lower latitudes who endure ten to twelve hours of cimmerian
+    shade.
+</p>
