--- a/css/style.scss
+++ b/css/style.scss
@@ -7,121 +7,10 @@ body {
   margin: 0;
 }
 
-#page {
-  width: 960px;
-  margin: 0 auto;
-  padding: 20px 0;
-}
-
-#header {
-  height: 145px;
-}
-
-#header-logo {
-  float: left;
-  margin-bottom: 5px;
-
-  img {
-    display: block;
-  }
-}
-
-#name-and-slogan {
-  float: right;
-  margin-right: 25px;
-}
-
 h1 {
   font-size: 32px;
   font-weight: normal;
-  margin: 0em 0 0.4em;
   color: #293094;
-
-  a {
-    text-decoration: none;
-    color: #293094;
-
-    &:visited {
-      text-decoration: none;
-      color: #293094;
-    }
-  }
-
-  &#site-name {
-    margin: 0px 0px 0px 10px;
-    font-size: 7em;
-    color: #293094;
-  }
-}
-
-a {
-  color: #aa0000;
-
-  &:visited {
-    color: #aa0000;
-  }
-}
-
-#navigation {
-  padding-bottom: 15px;
-  clear: both;
-}
-
-#primary {
-  background: #333;
-  padding: 10px 0px 10px 10px;
-  font-size: 24px;
-}
-
-.clear-block {
-  display: block;
-
-  &:after {
-    content: ".";
-    display: block;
-    height: 0;
-    clear: both;
-    visibility: hidden;
-  }
-}
-
-ul.links {
-  margin: 0;
-  padding: 0;
-}
-
-#navigation li {
-  padding: 0;
-  float: left;
-
-  &.active a {
-    text-decoration: underline;
-  }
-}
-
-ul.links li {
-  display: inline;
-  list-style-type: none;
-  padding: 0 0.5em;
-}
-
-#navigation a {
-  &.active {
-    text-decoration: underline;
-  }
-
-  color: #fff;
-  text-decoration: none;
-  display: block;
-  padding: 5px 10px;
-}
-
-#content-content,
-.block .content,
-.help {
-  line-height: 22px;
-  text-align: justify;
-  color: #000;
 }
 
 h2 {
@@ -132,21 +21,108 @@ h2 {
   color: #aa0000;
 }
 
-.photo-wrapper {
-  border: 1px solid #000;
-  margin: 20px 0 0 20px;
+h3 {
+  font-size: 16px;
+  font-weight: bold;
+  margin: 0;
+  color: #aa0000;
+}
+
+a {
+  color: #aa0000;
+
+  &:visited {
+    color: #aa0000;
+  }
+}
+
+figure {
+  border: 1px solid #333;
+  margin: 10px 0 10px 20px;
   float: right;
   clear: both;
   text-align: center;
 
-  p {
+  figcaption {
     margin: 3px 0px 8px 0px;
     font-weight: bold;
     font-size: 1em;
   }
 }
 
-#footer {
+.page {
+  width: 960px;
+  margin: 0 auto;
+  padding: 20px 0;
+}
+
+.header {
+  height: 145px;
+
+  h1 {
+    margin: 0px 0px 0px 10px;
+    font-size: 7em;
+    color: #293094;
+
+    a {
+      text-decoration: none;
+      color: #293094;
+
+      &:visited {
+        text-decoration: none;
+        color: #293094;
+      }
+    }
+  }
+
+  .logo {
+    float: left;
+  }
+
+  .name {
+    float: right;
+    margin-right: 25px;
+  }
+}
+
+.navigation {
+  background: #333;
+  padding: 10px 0px 10px 10px;
+  margin-bottom: 15px;
+  font-size: 24px;
+  clear: both;
+
+  ul {
+    margin: 0;
+    padding: 0;
+  }
+
+  li {
+    padding: 0;
+    display: inline;
+    list-style-type: none;
+    float: left;
+
+    &.active a {
+      text-decoration: underline;
+    }
+
+    a {
+      color: #fff;
+      text-decoration: none;
+      display: block;
+      padding: 5px 10px;
+    }
+  }
+}
+
+.content {
+  line-height: 22px;
+  text-align: justify;
+  color: #000;
+}
+
+.footer {
   text-align: center;
   background-color: #bbb;
   padding: 10px 0px 10px 0px;
@@ -156,5 +132,17 @@ h2 {
 
   a {
     color: #525252;
+  }
+}
+
+.clear-block {
+  display: block;
+
+  &:after {
+    content: "";
+    display: block;
+    height: 0;
+    clear: both;
+    visibility: hidden;
   }
 }
